[tool.poetry]
name = "\u001b[C\u001b[D"
version = "0.1.0"
description = "Toy python package for DSCI524 assignment1"
authors = ["Anita Li <62414521+AnitaLi-0371@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
